--- a/HomeRentApp-Api/appsettings.json
+++ b/HomeRentApp-Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "HomeRentApp_ApiContext": "Server=localhost;Database=HomeRentContextSQLServer-Api;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    }
 }
