Implementacion del CRUD para el departamento en MAUI

--- a/HomeRentApp-MAUI/HomeRentApp-MAUI.csproj
+++ b/HomeRentApp-MAUI/HomeRentApp-MAUI.csproj
@@ -63,8 +63,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Services\" />
-	  <Folder Include="Views\" />
+	  <MauiXaml Update="Views\DepartamentosPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\EditarDepartamentoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\NuevoDepartamentoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
